dark mode + fixes

--- a/src/_style.css
+++ b/src/_style.css
@@ -1,3 +1,10 @@
 * {
 	font-family: 'Courier New', Courier, monospace;
 }
+body {
+	color: #eee;
+	background: #121212;
+}
+a {
+	color: #809fff;
+}
